--- a/index.html
+++ b/index.html
@@ -99,13 +99,17 @@
             <h3 class="projects__title">Project Experience</h3>
                 <ul class="projects__container">
                     <li class="projects__link">
-                        <a href="https://mygelo.github.io/Bose/
-                        " target="_blank">headphones Bose
+                        <a class="link" href="https://mygelo.github.io/Bose/
+                        " target="_blank"> <svg class="svg">
+                            <use href="./images/sprite.svg#icon-github"></use>
+                         </svg> headphones Bose
                     </a>
                     </li>
                     <!-- <li class="projects__link"><a href="https://mygelo.github.io/news-app/" target="_blank">News-app</a></li> -->
                     <li class="projects__link">
-                        <a href="https://teiatan.github.io/News-App/" target="_blank"> News-App</a>
+                        <a class="link" href="https://teiatan.github.io/News-App/" target="_blank">  <svg class="svg">
+                            <use href="./images/sprite.svg#icon-github"></use>
+                         </svg> News-App</a>
                     </li>
                     
                 </ul>
