--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <a class="link" href="https://mygelo.github.io/Bose/
                         " target="_blank"> <svg class="svg">
                             <use href="./images/sprite.svg#icon-github"></use>
-                         </svg> headphones Bose
+                         </svg> Headphones Bose
                     </a>
                     </li>
                     <!-- <li class="projects__link"><a href="https://mygelo.github.io/news-app/" target="_blank">News-app</a></li> -->
